// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/createBlock.ts Blank-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
}
`;

exports[`utils/createBlock.ts Blank-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
}
`;

exports[`utils/createBlock.ts Embed-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "src": "",
  },
  "type": "Embed",
}
`;

exports[`utils/createBlock.ts Embed-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "src": "",
  },
  "type": "Embed",
}
`;

exports[`utils/createBlock.ts Image-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "align": "center",
    "caption": "",
    "src": "",
  },
  "type": "Image",
}
`;

exports[`utils/createBlock.ts Image-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "align": "center",
    "caption": "",
    "src": "",
  },
  "type": "Image",
}
`;

exports[`utils/createBlock.ts Paragraph-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "body": <p></p>,
  },
  "type": "Paragraph",
}
`;

exports[`utils/createBlock.ts Paragraph-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "payload": Object {
    "body": <p></p>,
  },
  "type": "Paragraph",
}
`;

exports[`utils/createBlock.ts Rule-default 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Rule",
}
`;

exports[`utils/createBlock.ts Rule-extend 1`] = `
Object {
  "id": "VVVV-XXXX-YYYY-ZZZZ",
  "type": "Rule",
}
`;
